<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/content_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ae.apps.tripmeter.fragments.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <!-- Hero Image -->
    <ImageView
        android:id="@+id/imgHero"
        android:src="@drawable/hero_trips_1"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:contentDescription="@string/str_hero_image"/>

    <!-- User input Card -->

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/cardview_content_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Trip Distance -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/lblDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".35"
                    android:text="@string/str_trip_distance"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/txtDistance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="right"
                    android:inputType="numberDecimal"/>
            </LinearLayout>

            <!-- Fuel Price -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lblFuelPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:text="@string/str_fuel_price"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/txtFuelPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="right"
                    android:inputType="numberDecimal"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!-- Mileage -->
                <TextView
                    android:id="@+id/lblMileage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:text="@string/str_mileage"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/txtMileage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="right"
                    android:inputType="numberDecimal"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnCalculate"
                android:text="@string/str_calculate"
                app:backgroundTint="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="end"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <!-- Result CardView -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/cardview_content_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblFuelNeeded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_total_fuel_needed"
                android:layout_marginBottom="@dimen/fab_margin"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/lblTotalCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_total_fuel_price"
                android:textSize="18sp"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>