...
    <string name="action_settings">Settings</string>

    <!-- Messages used in the app -->
    <string name="str_trip_distance">Trip Distance</string>
    <string name="str_fuel_price">Fuel Price</string>
    <string name="str_mileage">Mileage</string>
    <string name="str_calculate">Calculate</string>
    <string name="str_hero_image">Hero image</string>

    <string name="str_expenses">Expenses</string>
    <string name="str_share">Share</string>
    <string name="str_total_expenses">Total Expenses </string>

...
